# CUDA_LABS

./: .clang-format  README.md  test_sycl.cpp
hw/: hw2.c
lab1/: .clang-tidy  CMakeLists.txt  architecture_characteristics.cu  hip_code.cpp  lab1_final.cu  lab1_final_copy1.cu  lab1_min_elements_vector.cpp  lab1_min_elements_vector.cu  lab1_min_elements_vector.cu.asc  lab1_min_elements_vector_copy.cpp  lab1_next_true.cu  lab1_tmp.cpp  lab1_true.cu  my_program  ЛР_1.docx.pdf.asc
lab2/: .gitignore  CMakeLists.txt  final_copy.cu  in.py  input.txt  lab2.cu  output.txt  sec.py  tmp.cu
lab4/: .gitignore  lab4.cu
lab4/main/: main.cpp  makefile
lab5/: CMakeLists.txt  input.txt  lab5.cu
